--- a/.env
+++ b/.env
@@ -29,6 +29,5 @@ compositeUrlForDelete='/services/data/v59.0/composite/sobjects?ids='
 queryUrl='/services/data/v59.0/query?q='
 
 # STANDARD SALESFORCE URLS (Not Configurable)
-tokenEndpoint='https://login.salesforce.com/services/oauth2/token'
-authUrlEndpoint='https://login.salesforce.com/services/oauth2/authorize'
-revokeUrlEndpoint='https://login.salesforce.com/services/oauth2/revoke'
+# tokenEndpoint='https://login.salesforce.com/services/oauth2/token'
+# authUrlEndpoint='https://login.salesforce.com/services/oauth2/authorize'
