--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "finmind",
-    "short_name": "finmind",
+    "name": "expenso",
+    "short_name": "expenso",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
