--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "finmind" "\0"
+            VALUE "FileDescription", "expenso" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "finmind" "\0"
+            VALUE "InternalName", "expenso" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "finmind.exe" "\0"
-            VALUE "ProductName", "finmind" "\0"
+            VALUE "OriginalFilename", "expenso.exe" "\0"
+            VALUE "ProductName", "expenso" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
